# Jongji

./: .env.dev  .env.e2e  .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  Phase1-Foundation.md  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.yml  jongji-final-spec.md  setup.sh
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0000_initial.py  0001_add_search_vectors.py  0002_add_slug_to_team_and_project.py
backend/src/jongji/: __init__.py  config.py  database.py  main.py
backend/src/jongji/api/: admin.py  attachments.py  audit.py  auth.py  calendar.py  comments.py  dashboard.py  deps.py  events.py  export.py  health.py  invites.py  labels.py  projects.py  rss.py  search.py  sessions.py  setup.py  tags.py  tasks.py  teams.py  templates.py  testing.py  users.py
backend/src/jongji/cli/: __init__.py  client.py  main.py
backend/src/jongji/mcp/: tools.py  (+1 more)
backend/tests/: conftest.py  test_admin_oauth.py  test_alerts.py  test_attachments.py  test_audit.py  test_auth.py  test_auth_disabled.py  test_auth_service.py  test_cli.py  test_comments.py  test_crypto.py  test_dashboard.py  test_event_bus.py  test_export.py  test_google_oauth.py  test_health.py  test_labels.py  test_mcp.py  test_mcp_common.py  test_member_mixin.py  test_models.py  test_projects.py  test_search.py  test_search_refactor.py  test_sessions.py  test_setup.py  test_tags.py  test_task_helpers.py  test_tasks.py  test_team_invites.py  test_teams.py  test_templates.py  test_transitions.py  test_users.py
(+193 files in other folders)
